css/screen.css
/*---- Global -----*/

html, body {
	margin: 0;
	padding: 0;
}

body {
	background: rgba(242,238,231,1);
	color: rgba(25,25,25,1);
	font: 100%/1.5 "Proxima-Nova-Light", sans-serif;
}

h1,h2,h3,h4,h5,h6  {
	text-transform: uppercase;
	font-weight: normal;
}

img {
	max-width: 100%;
}

a {
	color: rgba(178,43,20,1);
	text-decoration: underline;
	position: relative;
	-webkit-transition: color .1s linear; background .1s linear;
	-moz-transition: color .1s linear; background .1s linear;
	-o-transition: color .1s linear; background .1s linear;
	transition: color .1s linear; background .1s linear;
}

a:hover {
	color: rgba(135,9,6,1);
	text-decoration: underline;
}

a:active {
	top: 1px;
}


/*---- Header -----*/

.doc-head {
	color: rgba(255,255,255,1);
}

nav[role="navigation"]{
	margin: 0 auto;
	max-width: 100%;
	padding: 2em 5% 1em 5%;
	background: #000;
	background: rgba(0,0,0,1);
	position: relative;
	text-align: center;
	float: left;
	width: 90%;
}

nav[role="navigation"] h1 {
	margin: 0 auto;
	left: 50%;
	margin: 0 0 0 -62.5px;
	position: absolute; 
	z-index: 1;
	bottom: -4em;
	width: 128px;
	height: 128px;
	text-indent: -9999px;
	background: transparent url(../img/logo.png) no-repeat 50% 0;
}

nav[role="navigation"] ul {
	margin: 0 auto;
	padding: 0 0 3em 0;
	list-style-type: none;
	font-size: 1em;
	width: 100%;
}

nav[role="navigation"] ul {
    float: none;
    width: 90%;
    -webkit-column-count: 2;
    -webkit-column-gap: .5em;
    -moz-column-count: 2;
    -moz-column-gap: .5em;
    column-count: 2;
    column-gap: .5em;
}
  
nav[role="navigation"] ul li a {  /* this stuff changes */
	display: block;
	padding-top: 1em; 
	margin-bottom: 1em;
}

.icon-illustration {
	background: url(../img/icon-illustration.png) no-repeat 50% 0;
}

.icon-design {
	background: url(../img/icon-design.png) no-repeat 50% 0;
}

.icon-photo {
	background: url(../img/icon-photo.png) no-repeat 50% 0;
}

.icon-about {
	background: url(../img/icon-about.png) no-repeat 50% 0;
}

.icon-blog {
	background: url(../img/icon-blog.png) no-repeat 50% 0;
}

.icon-contact {
	background: url(../img/icon-contact.png) no-repeat 50% 0;
}


/* Wide screen

.icon-illustration {
	margin: 0;
	background: url(../img/icon-illustration.png) no-repeat 0;
}

.icon-design {
	margin: 0;
	background: url(../img/icon-design.png) no-repeat 0;
}

.icon-photo {
	margin: 0;
	background: url(../img/icon-photo.png) no-repeat 0;
}

.icon-about {
	margin: 0;
	background: url(../img/icon-about.png) no-repeat 0;
}

.icon-blog {
	margin: 0;
	background: url(../img/icon-blog.png) no-repeat 0;
}

.icon-contact {
	margin: 0;
	background: url(../img/icon-contact.png) no-repeat 0;
}

*/

nav[role="navigation"] ul li a {
	color: rgba(255,255,255,1);
	text-decoration: none;
	position: relative;
	-webkit-transition: color .1s linear;
	-moz-transition: color .1s linear;
	-o-transition: color .1s linear;
	transition: color .1s linear;
}

nav[role="navigation"] ul li a:hover {
	color: rgba(222,218,211,1);
}

div[role="banner"] {
	margin: 0 auto;
	max-width: 100%;
	height: 27.5em;
	overflow: auto;
	padding: 0;
	background: rgba(27,55,73,1) url(../img/banner-night.jpg) no-repeat 50% 82%;
	color: rgba(255,255,255,1);
	text-align: center;
	clear: both;
}

.intro {
	max-width: 80%;
	margin: 0 auto;
	padding: 12em 3% 1em 3%;
	text-shadow: 0.1em 0.1em 0.2em rgb(0,30,50);
}

.intro h3 {
	font-size: .95em;
}

.intro p {
	font-size: .85em;
}



/*---- Container -----*/

.contain {
	margin: 0 auto;
	max-width: 90%;
	padding: 3em 0;
}

/*---- Main -----*/

article header h1 {
	line-height: 1.2em;
	margin: 1em 0 0 0;
}

article header h1 a, article header h1 a:hover, article header h1 a:active {
	text-decoration: none;
}

article header p {
	font-size: .85em;
}

.blogthumb {
	margin: auto 0;
}

article .excerpt-lg {
	font-size: 1.2em;
}

article footer ul {
	margin: 0;
	padding: .5em 0 2em 0;
	list-style-type: none;
}

article footer ul li {
	display: inline;
}

article footer ul li:first-of-type {
padding: 0 5em 0 0;
}


/*---- Complementary ----*/


section[role="complementary"] a {
	-webkit-transition: background .1s linear;
	-moz-transition: background .1s linear;
	-o-transition: background .1s linear;
	transition: background .1s linear;
}

section[role="complementary"] h2 {
	font-size: 1em;
	color: rgba(178,43,20,1);
}

.availability {
	margin-bottom: 2em;
	text-align: center;
}

.availability a {
	display: inline-block;
	background-color: rgb(100,130,50);
	color: rgb(255,255,255);
	font-size: 1.25em;
	padding: .75em;
	text-transform: uppercase;
	text-decoration: none;
	text-shadow: none;
	-moz-border-radius: .5em;
	-webkit-border-radius: .5em;
	border-radius: .5em;
}

.availability a:hover {
	background-color: rgb(97,124,55);
	color: rgb(255,255,255);
	text-decoration: none;
}

.categories ul, .locations ul {
	list-style: none;
	margin: 0;
	padding: 0; 
}


.categories ul {
    float: none;
    width: 100%;
    -webkit-column-count: 2;
    -webkit-column-gap: .5em;
    -moz-column-count: 2;
    -moz-column-gap: .5em;
    column-count: 2;
    column-gap: .5em;
}

.categories ul li {
	border-bottom: solid 1px rgb(227,227,208);
}

.categories ul li:nth-child(4), .categories ul li:nth-child(8) {
	border-bottom: none; 
}

.categories ul li a {
	color: rgba(25,25,25,1);
	border-bottom: none; 
	display: block;
	padding: .5em 0 .5em .5em;
	text-decoration: none;
}

.categories ul li a:hover {
	background: rgba(210,200,185,.15);
}

.locations {
	padding: 1em 0 0 0;
	width: auto;
	margin: 0 auto;
}
	
.locations p {
	font-size: 1em;
}

.locations ul li {
	margin: 0 0 1.5em 0;
	background: url(../img/badge-vancouver.png) no-repeat 0;
	padding-left: 80px;
}

.locations ul li p {
	margin: 0;
}



/* Wide screen

.locations {
	margin-top: 2.5em;
}
	
.locations p {
	font-size: 1em;
}

.locations ul li {
	margin: 0 0 1.5em 0;
	background: url(../img/badge-vancouver.png) no-repeat 0;
	padding-left: 80px;
}

.locations ul li p {
	margin: 0;
}

*/



/*---- Footer -----*/

footer[role="contentinfo"] {
	margin: 0 auto;
	max-width: 100%;
	overflow: auto;
	padding: 2em 5% 3em 5%;
	background: rgba(0,0,0,1);
	text-align: center;
	clear: both;
}

footer[role="contentinfo"] a, footer[role="contentinfo"] a:active {
	color: rgba(255,255,255,1);
	text-decoration: none;
	-webkit-transition: color .1s linear;
	-moz-transition: color .1s linear;
	-o-transition: color .1s linear;
	transition: color .1s linear;
}

footer[role="contentinfo"] a:hover {
	color: rgba(222,218,211,1);
}

.doc-foot ul, .social ul {
	margin: 0 0 1.5em 0;
	padding: 0;
	list-style-type: none;
	font-size: 1em;
}

.doc-foot ul {
    float: none;
    width: 100%;
    -webkit-column-count: 2;
    -webkit-column-gap: .5em;
    -moz-column-count: 2;
    -moz-column-gap: .5em;
    column-count: 2;
    column-gap: .5em;
}

.social ul li {
	display: inline;
}

.social ul li a {
	text-indent: -9999px;
	background-repeat: no-repeat;
	display: inline-block;
	width: 2.5em;
	height: 2.5em;
	margin: 0 .15em;
	padding: 0;
	background-position: center center;
}

.twitter {
	background-image: url(../img/social-twitter-off.png);
}

.dribbble {
	background-image: url(../img/social-dribbble-off.png);
}

.flickr {
	background-image: url(../img/social-flickr-off.png);
}

.lanyrd {
	background-image: url(../img/social-lanyrd-off.png);
}

.rdio {
	background-image: url(../img/social-rdio-off.png);
}

.zerply {
	background-image: url(../img/social-zerply-off.png);
}


/*---- Media Queries -----*/
.nav-toggle {
	display: none;
	left: 0;
	position: absolute;
	top: 0;
}
.toggled-nav {
	-webkit-transition: max-height 1s linear;
	-moz-transition: max-height 1s linear;
	-o-transition: max-height 1s linear;
	transition: max-height 1s ease;
	overflow: hidden;
	max-height: 400px;
	padding: 0 !important; /* TODO: This is just an override; I didn’t want to mess with your styles too much. */
}
.hide-me {
	overflow: hidden;
}
@media screen and (max-width: 70em) {
	.hide-me {
		max-height: 0;
		display: block;
	}
	.nav-toggle {
		display: block;
	}
}


@media screen and (min-width: 70em) {


/* -- Stretch out top navigation horizontally -- */ 

nav[role="navigation"]{
	margin: 0 auto;
	padding: 1em 5% 1em 5%;
	text-align: center;
}

nav[role="navigation"] h1 {
	top: .75em;
}

nav[role="navigation"] ul {
	margin: 0;
	padding: 0;
	width: 100%;
	-webkit-column-count: 1;  /*---- Is this the right way to turn off columns? ----*/
   -webkit-column-gap: 0;
   -moz-column-count: 1;
   -moz-column-gap: 0;
   column-count: 1;
   column-gap: 0;
}

nav[role="navigation"] ul li {
	width: 13%;
}

nav[role="navigation"] ul li a {
	display: inline;
	padding-left: 22px;
	padding-top: 0; 
	margin-bottom: 0;
}

nav[role="navigation"] li:nth-child(1), nav[role="navigation"] li:nth-child(2), nav[role="navigation"] li:nth-child(3) {
	float: left;
}

nav[role="navigation"] li:nth-child(4), nav[role="navigation"] li:nth-child(5), nav[role="navigation"] li:nth-child(6) {
	float: right;
}

.icon-illustration {
	margin: 0;
	background: url(../img/icon-illustration.png) no-repeat 0;
}

.icon-design {
	margin: 0;
	background: url(../img/icon-design.png) no-repeat 0;
}

.icon-photo {
	margin: 0;
	background: url(../img/icon-photo.png) no-repeat 0;
}

.icon-about {
	margin: 0;
	background: url(../img/icon-about.png) no-repeat 0;
}

.icon-blog {
	margin: 0;
	background: url(../img/icon-blog.png) no-repeat 0;
}

.icon-contact {
	margin: 0;
	background: url(../img/icon-contact.png) no-repeat 0;
}

/* -- Bump down banner text -- */ 

.intro {
	max-width: 80%;
	margin: 0 auto;
	padding: 16.5em 3% 1em 3%;
	text-shadow: 0.1em 0.1em 0.2em rgb(0,30,50);
}

.intro h3 {
	font-size: 1.5em;
}

.intro p {
	font-size: 1em;
}

/* -- Turn into two columns -- */ 

main[role="main"] {
	width: 76.04166666%;
	float: left;
	border: 1px solid red;
} 

section[role="complementary"] {
	width: 20.95833333%;
	float: right;
	border: 1px solid blue;
} 


/* -- Turn into single column -- */ 

.categories ul {
    -webkit-column-count: 1;
    -webkit-column-gap: 0;
    -moz-column-count: 1;
    -moz-column-gap: 0;
    column-count: 1;
    column-gap: 0;
}

.categories ul li {
	border-bottom: solid 1px rgb(227,227,208);
}

.categories ul li:nth-child(4) { 
	border-bottom: solid 1px rgb(227,227,208);
}


/* -- Stretch out footer nav horizontally -- */ 

.doc-foot ul {
	width: auto;
	float: left;
	-webkit-column-count: 1;
	-webkit-column-gap: 0;
	-moz-column-count: 1;
	-moz-column-gap: 0;
	column-count: 1;
	column-gap: 0;
}

.doc-foot ul li {
	padding-right: 2em;
	display: inline;
} 

.social ul {
	margin: 0;
}

.social ul li {
	float: right;
}

}





/*---- Fonts -----*/

@font-face {
    font-family: 'Proxima-Nova-Light';
    src: url('../fonts/proximanova-light-webfont.eot');
    src: url('../fonts/proximanova-light-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/proximanova-light-webfont.woff') format('woff'),
         url('../fonts/proximanova-light-webfont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Proxima-Nova';
    src: url('../fonts/proximanova-regular-webfont.eot');
    src: url('../fonts/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/proximanova-regular-webfont.woff') format('woff'),
         url('../fonts/proximanova-regular-webfont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}


/*---- Selections ----*/

::-webkit-selection {
background: rgb(178,43,20); 
color: rgb(255,255,255);
text-shadow: none; }

::-moz-selection {
background: rgb(178,43,20); 
color: rgb(255,255,255);
text-shadow: none; }

::selection {
background: rgb(178,43,20); 
color: rgb(255,255,255);
text-shadow: none; }

